examples/test/testpolicy1200.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1200
  namespace: namespace306
spec:
  podSelector:
    matchLabels:
      key19: value23
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key35: value44
          key2: value42
          key26: value19
      podSelector:
        matchLabels:
          key25: value17
          key38: value20
